--- a/api/package.json
+++ b/api/package.json
@@ -54,6 +54,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "sharp": "^0.33.5",
+    "slugify": "^1.6.6",
     "stream": "^0.0.2",
     "stripe": "^17.7.0",
     "tesseract.js": "^5.0.4"
